--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -300,18 +300,20 @@
               <form action="" method="post" role="form" class="">
                 <div class="form-group">
                   <input type="text" name="{{ form.username.name }}" class="form-control" id="id_username" placeholder="Your Name" />
-                  <span class="validate">{{form.username.errors}}</span>
+                  <span class="validate">{{ form.username.errors }}</span>
                 </div>
 
                 <div class="form-group">
                   <input type="password" name="{{ form.password.name }}" class="form-control" id="id_password" placeholder="Your Password"/>
-                  <span class="validate">{{form.password.errors}}</span>
+                  <span class="validate">{{ form.password.errors }}</span>
                 </div>
                 <span class="validate">{{form.non_field_errors.errors}}</span>
                 <div class="form-group">
                   <input type="submit"  class="form-control" value="Login"/>
-                  <span class="validate">{{form.password.errors}}</span>
+                  <span class="validate">{{ form.password.errors }}</span>
                 </div>
+                {{ form.non_field_errors }}
+
                 {% csrf_token %}
               </form>
             </div>
