default profile image

--- a/templates/dashboard/includes/app-header.html
+++ b/templates/dashboard/includes/app-header.html
@@ -66,7 +66,7 @@
                         <div class="widget-content-left">
                             <div class="btn-group">
                                 <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-                                    <img width="42" class="rounded-circle" src="https://pbs.twimg.com/profile_images/1067044207/abc1_400x400.gif" alt="">
+                                    <img width="42" class="rounded-circle" src="https://brandyourself.com/blog/wp-content/uploads/linkedin-profile-picture-too-close.png" alt="">
                                     <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                 </a>
                                 <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
