--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,6 +12,9 @@
   <!-- Favicons -->
   <link href="/assets/index/img/favicon.png" rel="icon">
   <link href="/assets/index/img/apple-touch-icon.png" rel="apple-touch-icon">
+  {% if request.user.is_authenticated  %}
+    <script> window.location.href = '{% url "home" %}'</script>
+  {% endif %}
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i" rel="stylesheet">
