--- a/templates/dashboard/includes/app-wrapper-footer.html
+++ b/templates/dashboard/includes/app-wrapper-footer.html
@@ -7,8 +7,8 @@
                         <div class="copyright float-center icon-gradient bg-love-kiss " style="font-size: 12px;">
                             Made with <i class="pe-7s-like icon-gradient bg-love-kiss" ></i> for a better
                             web.<br><span style="font-size: 12px">
-                            © 2020 <script> document.write( (new Date().getFullYear() > 2020)? (" - " + new Date().getFullYear()) : "" ); </script>
-                            <a href="https://www.fegno.com/?ref=utsav_config&name={{ settings.UTSAV_NAME }}" class="" target="_blank"> Fegno Technologies</a></span>
+                            © 2020 LetsCode
+                            </span>
                         </div>
                     </li>
                 </ul>
