--- a/templates/dashboard/lesson_detail.html
+++ b/templates/dashboard/lesson_detail.html
@@ -28,11 +28,13 @@
 	    	<div class="card-body">
 	    		<div class="row">
 	    		{% for qn in object.question_set.all %}
-	    		<div class="col-md-12">
+	    		<div class="col-md-12 mb-2">
 	    			<h6>#{{ forloop.counter }}. {{ qn.name }}</h6>
-	    			<a class="btn btn-sm btn-primary" href="{% url 'question' pk=qn.pk %}"> - View Question </a>
-	    		</div>
+	    			<a class="btn btn-sm btn-primary btn-inline " href="{% url 'question' pk=qn.pk %}"> - View Question </a>
+
 	    		<hr />
+				</div>
+
 	    		{% endfor %}
 	    		</div>
 	    	</div>
@@ -49,7 +51,7 @@
 	    		<div class="col-md-12">
 	    			<h6>Reference #{{ forloop.counter }} </h6>
 	    			<p>{{ ref.description | safe }}</p>
-	    			<a class="btn btn-sm btn-primary" href="{{ ref.link }}" target="_blank"> {{ ref.link }} </a>
+	    			<a class="btn btn-sm btn-primary btn-inline d-inline" href="{{ ref.link }}" target="_blank"> {{ ref.link }} </a>
 	    		</div>
 	    		<hr />
 	    		{% endfor %}
