--- a/templates/dashboard/includes/app-sidebar.html
+++ b/templates/dashboard/includes/app-sidebar.html
@@ -1,5 +1,5 @@
 {% load menu %}
-<div class="app-sidebar sidebar-shadow" >
+<div class="app-sidebar sidebar-shadow" xmlns:item.menu_anchor_filter>
 <div class="app-header__logo">
 <div class="logo-src"></div>
 <div class="header__pane ml-auto">
@@ -25,7 +25,7 @@
 </div>
 <div class="scrollbar-sidebar" style="overflow-y:scroll;">
 <div class="app-sidebar__inner">
-    <style> .vertical-nav-menu li .mm-collapse li a {overflow: hidden; text-overflow: ellipsis;} </style>
+    <style> .vertical-nav-menu li a {overflow: hidden; text-overflow: ellipsis;} </style>
 <ul class="vertical-nav-menu">
     <li class="app-sidebar__heading">Dashboard</li>
     
@@ -34,7 +34,7 @@
     <li class="app-sidebar__heading">Lessons</li>
     {% day_list request as task_days  %}
     {% for day in task_days %}
-    <li class="{{ request|if_day:"mm-active" }}">
+    <li class="{{ request|if_day:'mm-active' }}">
         <a {{ request|if_day:'aria-expanded="true"' }} href="#">
             <i class="metismenu-icon pe-7s-diamond"></i> {{ day.day }}
             <i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
@@ -43,12 +43,11 @@
         <ul class="mm-collapse {{ request|if_day:'mm-show' }}">
 
             {% for item in day.lessons  %}
-            <li><a {{ item.menu_anchor_filter|menu_anchor:request  }} >
+            <li><a {{ item.menu_anchor_filter | menu_anchor:request  }} style="overflow:hidden;text-overflow:ellipse" >
                 <i class="metismenu-icon"></i> {{item.lesson.order_number}} - {{ item.lesson.title}}  </a></li>
             {% endfor %}
-    </ul>
-
-        </li>
+        </ul>
+    </li>
     {% endfor %}
 
     <li class="app-sidebar__heading"> Others </li>
