--- a/templates/dashboard/lesson_detail.html
+++ b/templates/dashboard/lesson_detail.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
-{% block page_title %} Day {{ object.name }} - Assessment  {% endblock %}
-{% block page_subtitle %} Take your today's Cource here. {% endblock %}
+{% block page_title %} Lesson {{ object.order_number }}. {{ object.title }} ( Day {{ object.day.name }})  {% endblock %}
+{% block page_subtitle %}  {% endblock %}
 
 
 {% block app_content %}
