--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -95,7 +95,7 @@
         <div class="section-title text-center">
 
           <h2> #DO #CODE  #REPEAT     </h2>
-          <p class="separator">Let's try learn programming in  comming 10 #SafeHomeDays</p>
+          <p class="separator">Let's try learn programming in  comming  #SafeHomeDays</p>
 
         </div>
       </div>
@@ -261,24 +261,19 @@
                          </p>
                         <span> HOW TO TEST? </span> <br />
                         open your  command prompt and type "<code>python --version</code>". if python installed, Its version will be stored. Else you have to install a new python version. You can <a href="https://www.python.org/downloads/" target="_blank">download Python Here</a>.
-
+                         <br />
+                        <br />
                         <span> WHAT WE HAVE TO USE FOR TYPING PYTHON? </span> <br />
 
-                        Python Donot require any specific IDE for working. However, while starting, IDE's Like
-
+                        Python do not require any specific IDE for working. However, while starting, IDE's Like
                         Atom, Sublime, Visual Studio Code will be helpful.
-
-
 
                     </div>
                   </div>
-
                 </div>
-
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </section><!-- End Testimonials Section -->
