--- a/templates/dashboard/solution_form.html
+++ b/templates/dashboard/solution_form.html
@@ -23,8 +23,14 @@
 	    			{% csrf_token %}
 		    		{{ form.as_p }}
 		    		<hr />
-		    		<button class="btn btn-primary"> Submit Solution </button>
-	    	</form>
+		    		<button class="btn btn-primary"> {% if object.pk %}Re{% endif %}Submit Solution </button>
+		    	</form>
+
+				{% if object.suggestions %}
+				<pre>
+					{{ object.suggestions | safe }}
+				</pre>
+				{% endif %}
 	    	</div>
 	    </div>
 	</div>
