--- a/templates/skeleton.html
+++ b/templates/skeleton.html
@@ -12,7 +12,8 @@
     <meta name="msapplication-tap-highlight" content="no">
     <link href="/assets/main.css" rel="stylesheet">
     <link href="//cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"  rel="stylesheet"/>  
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"  rel="stylesheet"/>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     {% block stylesheet %}{% endblock %}
 
     {% block scriptsheets %}{% endblock %}
@@ -45,11 +46,13 @@
 
     (function(){
 {% if messages %}
-    $(document).ready(() => {
-        {% for message in messages %}
-            Swal.fire("", '{{ message }}', 'message.tags' );
-        {% endfor %}
-    });
+    {% for message in messages %}
+        Swal.fire({ html: '{{ message }}',
+        icon: '{{message.tags}}',
+        showConfirmButton: false,
+        position: 'top-end',
+        timer: 1500  });
+    {% endfor %}
 
 {% endif %}
 
