--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block page_title %} A Message for you  {% endblock %}
 {% block page_subtitle %}  {% endblock %}
-
+{% block title %} Dashboard {% endblock %}
 
 {% block app_content %}
 
