--- a/templates/dashboard/leadingquestion_list.html
+++ b/templates/dashboard/leadingquestion_list.html
@@ -3,7 +3,7 @@
 {% block page_subtitle %} Here are some Questions, You don't have to answer that.
 But When you feels you are confident enough to solve each problem.
 Mark that as "Can be Sloved!". {% endblock %}
-
+{% block title %} Dashboard {% endblock %}
 
 {% block app_content %}
 
