--- a/templates/skeleton.html
+++ b/templates/skeleton.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>{% block title %} Dashboard {% endblock %}  << LETS CODE CEK  </title>
+    <title>{% block title %} Dashboard {% endblock %}  |  LETS CODE CEK  </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
     <meta name="description" content="This is an example dashboard created using build-in elements and components.">
     <meta name="msapplication-tap-highlight" content="no">
@@ -38,10 +38,14 @@
 {#<script src="//cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js" defer></script>#}
 {% block end_script_sheets %}
 {% endblock %}
+{% include 'dashboard/includes/chaport.html' %}
 <script type="text/javascript">
     document.querySelectorAll('input[type=file]').forEach(function(element){
         element.classList.add('btn');
         element.classList.add('btn-primary');
+    });
+    document.querySelectorAll('input,textarea').forEach(function(element){
+        element.classList.add('form-control');
     });
 
     (function(){
